@startuml
skinparam classAttributeIconSize 0
package Collisions{
    Component <|--- HitBox
    HitBox "transform" *-- "1" ITransform
    HitBox "entity" *-- "1" Entity
    class HitBox{
        - dimensions : IVector2
        +{static} NoCheckDistance : int = 500
        +{static} getOne(w,h : float , entity:Entity): HitBox
        +{static} getOne(dimensions : IVector2 , entity:Entity): HitBox

        -HitBox(dimensions : IVector2 , entity:Entity)
        +getEntity():Entity

        ~checkCollision(other:HitBox):CollisionData

        - vertices() : [IVector2]
        - diagonalLength() : float
        - distToCenter(v : IVector2) : float
        - isFar(other: ITransform) : boolean
        - vertexInside(other : HitBox): IVector2
        - bottomLeft(): IVector2
        - topRight(): IVector2
        - bottomSide(): IVector2
        - leftSide(): IVector2

    }

    HitBoxesLayer "hitBoxes" o--- "0..*" HitBox


    class HitBoxesLayer{
        ~ HitBoxesLayer()
        + addHitBox(hitBox : HitBox)
        + removeHitBox(hitBox : HitBox)
        + iterator() : [HitBox]
        + checkLayer(other:[HitBox])
        + contains(hitBox : HitBox) : boolean
        - condition(mine,their : HitBox) : boolean
    }

    Component <|-- HitBoxManager

    HitBoxManager *-- "8" HitBoxesLayer

    class HitBoxManager{
        - {static} HitBoxManager instance;
        + {static} HitBoxManager getInstance;

        + {static} PLAYER : int = 0
        + {static} ENEMIES : int = 1
        + {static} PLAYERBULLET : int = 2
        + {static} ENEMYBULLET : int = 3
        + {static} BARRICADE_BOTH: int  =4
        + {static} BARRICADE_ENEM: int  =5
        + {static} REWARDS : int = 6
        + {static} SHIELD : int = 7
        + {static} CANT : int = 8

        + update() ++
        + addHitBox(hitBox: HitBox, layer : int)
        + removeHitBox(hitBox: HitBox)

        - toAdd : map<int, [HitBox]>
        - toRemove : map<int, [HitBox]>
        - connection : [Tuple<int,int>]
        - inputData : String
        - long i=0
        - HitBoxesManager()
        - checkQueues()
        - makeACheck()

    }


    Entity "1" o-- "mine" CollisionData
    Entity "1" o-- "their" CollisionData


    class CollisionData{
        - contactPoint : IVector2
        + mine() : Entity
        + their() : Entity
        + contactPoint(): IVector2
        + CollisionData(mine,their : Entity , contactPoint : IVector2)

    }
}
@enduml
